syntax = "proto3";

package telegram.v1;
option go_package = "telegram/v1;telegramv1";

import "google/protobuf/empty.proto";

// IdentityTraitsService works with current authenticated identity.
service IdentityTraitsService {
    rpc GetIdentityTraits (google.protobuf.Empty) returns (IdentityTraits) {
        option idempotency_level = NO_SIDE_EFFECTS;
    };
    rpc UpdateIdentityTraits (UpdateIdentityTraitsRequest) returns (IdentityTraits);
}

message IdentityTraits {
    string default_currency = 1; // ISO 4217
    int64 tg_uid = 2;
}

message UpdateIdentityTraitsRequest {
    string default_currency = 1; // required
}
